syntax = "proto3";
package dualitylabs.duality.dex;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dualitylabs/duality/dex/params.proto";
import "dualitylabs/duality/dex/limit_order_tranche_user.proto";
import "dualitylabs/duality/dex/limit_order_tranche.proto";
import "dualitylabs/duality/dex/user_positions.proto";
import "dualitylabs/duality/dex/deposit_record.proto";
import "dualitylabs/duality/dex/tick_liquidity.proto";
import "dualitylabs/duality/dex/pool_reserves.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/duality-labs/duality/x/dex/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/dualitylabs/duality/dex/params";
  }

  // Queries a LimitOrderTrancheUser by index.
	rpc LimitOrderTrancheUser(QueryGetLimitOrderTrancheUserRequest) returns (QueryGetLimitOrderTrancheUserResponse) {
		option (google.api.http).get = "/dualitylabs/duality/dex/limit_order_tranche_user/{address}/{trancheKey}";
	}

	// Queries a list of LimitOrderTrancheMap items.
	rpc LimitOrderTrancheUserAll(QueryAllLimitOrderTrancheUserRequest) returns (QueryAllLimitOrderTrancheUserResponse) {
		option (google.api.http).get = "/dualitylabs/duality/dex/limit_order_tranche_user";
	}

  // Queries a LimitOrderTranche by index.
 rpc LimitOrderTranche(QueryGetLimitOrderTrancheRequest) returns (QueryGetLimitOrderTrancheResponse) {
  	option (google.api.http).get = "/dualitylabs/duality/dex/limit_order_tranche/{pairID}/{tokenIn}/{tickIndex}/{trancheKey}";
  }

  // Queries a list of LimitOrderTranche items for a given pairID / TokenIn combination.
  rpc LimitOrderTrancheAll(QueryAllLimitOrderTrancheRequest) returns (QueryAllLimitOrderTrancheResponse) {
  	option (google.api.http).get = "/dualitylabs/duality/dex/limit_order_tranche/{pairID}/{tokenIn}";
  }

  // Queries a list of GetUserPositions items.
	rpc GetUserPositions(QueryGetUserPositionsRequest) returns (QueryGetUserPositionsResponse) {
		option (google.api.http).get = "/dualitylabs/duality/dex/user/positions/{address}";
	}

// Queries a list of UserDeposits items.
	rpc UserDepositsAll(QueryAllUserDepositsRequest) returns (QueryAllUserDepositsResponse) {
		option (google.api.http).get = "/dualitylabs/duality/dex/user/deposits/{address}";
	}

// Queries a list of UserLimitOrders items.
	rpc UserLimitOrdersAll(QueryAllUserLimitOrdersRequest) returns (QueryAllUserLimitOrdersResponse) {
		option (google.api.http).get = "/dualitylabs/duality/dex/user/limit_orders/{address}";
	}

	// Queries a list of TickLiquidity items.
	rpc TickLiquidityAll(QueryAllTickLiquidityRequest) returns (QueryAllTickLiquidityResponse) {
		option (google.api.http).get = "/dualitylabs/duality/dex/tick_liquidity/{pairID}/{tokenIn}";
	}

// Queries a InactiveLimitOrderTranche by index.
	rpc InactiveLimitOrderTranche(QueryGetInactiveLimitOrderTrancheRequest) returns (QueryGetInactiveLimitOrderTrancheResponse) {
		option (google.api.http).get = "/dualitylabs/duality/dex/filled_limit_order_tranche/{pairID}/{tokenIn}/{tickIndex}/{trancheKey}";
	}

	// Queries a list of InactiveLimitOrderTranche items.
	rpc InactiveLimitOrderTrancheAll(QueryAllInactiveLimitOrderTrancheRequest) returns (QueryAllInactiveLimitOrderTrancheResponse) {
		option (google.api.http).get = "/dualitylabs/duality/dex/filled_limit_order_tranche";
	}

// Queries a list of PoolReserves items.
	rpc PoolReservesAll(QueryAllPoolReservesRequest) returns (QueryAllPoolReservesResponse) {
		option (google.api.http).get = "/dualitylabs/duality/dex/pool_reserves/{pairID}/{tokenIn}";
	}

  // Queries a PoolReserve by index
  rpc PoolReserves(QueryGetPoolReservesRequest) returns (QueryGetPoolReservesResponse) {
		option (google.api.http).get = "/dualitylabs/duality/dex/pool_reserves/{pairID}/{tokenIn}/{tickIndex}/{fee}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetLimitOrderTrancheUserRequest {
  string address = 1;
  string trancheKey = 2;
}

message QueryGetLimitOrderTrancheUserResponse {
	LimitOrderTrancheUser LimitOrderTrancheUser = 1 [(gogoproto.nullable) = false];
}

message QueryAllLimitOrderTrancheUserRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllLimitOrderTrancheUserResponse {
	repeated LimitOrderTrancheUser LimitOrderTrancheUser = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetLimitOrderTrancheRequest {
  string pairID = 1;
  int64 tickIndex =2;
  string tokenIn = 3;
  string trancheKey = 4;

}

message QueryGetLimitOrderTrancheResponse {
	LimitOrderTranche LimitOrderTranche = 1 [(gogoproto.nullable) = false];
}

message QueryAllLimitOrderTrancheRequest {
  string pairID = 1;
  string tokenIn = 2;
	cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message QueryAllLimitOrderTrancheResponse {
	repeated LimitOrderTranche LimitOrderTranche = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetUserPositionsRequest {
  string address = 1;
}

message QueryGetUserPositionsResponse {
  UserPositions UserPositions = 1 [(gogoproto.nullable) = false];
}

message QueryAllUserDepositsRequest {
  string address = 1;
}

message QueryAllUserDepositsResponse {
  repeated DepositRecord Deposits = 1 [(gogoproto.nullable) = false];
}

message QueryAllUserLimitOrdersRequest {
  string address = 1;
}

message QueryAllUserLimitOrdersResponse {
  repeated LimitOrderTrancheUser limitOrders = 1 [(gogoproto.nullable) = false];
}

message QueryAllTickLiquidityRequest {
  string pairID = 1;
  string tokenIn = 2;
	cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message QueryAllTickLiquidityResponse {
	repeated TickLiquidity tickLiquidity = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetInactiveLimitOrderTrancheRequest {
	string pairID = 1;
  string tokenIn = 2;
  int64 tickIndex = 3;
  string trancheKey = 4;

}

message QueryGetInactiveLimitOrderTrancheResponse {
	LimitOrderTranche inactiveLimitOrderTranche = 1 [(gogoproto.nullable) = false];
}

message QueryAllInactiveLimitOrderTrancheRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllInactiveLimitOrderTrancheResponse {
	repeated LimitOrderTranche inactiveLimitOrderTranche = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryAllPoolReservesRequest {
  string pairID = 1;
  string tokenIn = 2;
cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message QueryAllPoolReservesResponse {
  repeated PoolReserves poolReserves = 1 [(gogoproto.nullable) = false];
cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetPoolReservesRequest {
  string pairID = 1;
  string tokenIn = 2;
  int64 tickIndex =3;
  uint64 fee = 4;

}

message QueryGetPoolReservesResponse {
	PoolReserves poolReserves = 1 [(gogoproto.nullable) = false];
}
// this line is used by starport scaffolding # 3
